k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wine-quality
  labels:
    app: wine-quality-prediction
